--- a/templates/basics/lateralD.html.twig
+++ b/templates/basics/lateralD.html.twig
@@ -9,8 +9,8 @@
 
             <div class="listing-item white-bg bordered mb-20">
                 <div class="overlay-container">
-                    <img src="./assets/images/nova_capa_72dpi__53463_std.jpg" alt="">
-                    <a class="overlay-link popup-img-single" href="./assets/images/nova_capa_72dpi__53463_std.jpg"><i class="fa fa-external-link"></i></a>
+                    <img src="/assets/images/nova_capa_72dpi__53463_std.jpg" alt="">
+                    <a class="overlay-link popup-img-single" href="/assets/images/nova_capa_72dpi__53463_std.jpg"><i class="fa fa-external-link"></i></a>
                     <!--<span class="badge">30% OFF</span>-->
                     <!--<div class="overlay-to-top links">-->
                         <!--<span class="small">-->
@@ -31,8 +31,8 @@
 
             <div class="listing-item white-bg bordered mb-20">
                 <div class="overlay-container">
-                    <img src="./assets/images/capa_especies__ornamentais_vol1__79650_std.jpg" alt="">
-                    <a class="overlay-link popup-img-single" href="./assets/images/capa_especies__ornamentais_vol1__79650_std.jpg"><i class="fa fa-external-link"></i></a>
+                    <img src="/assets/images/capa_especies__ornamentais_vol1__79650_std.jpg" alt="">
+                    <a class="overlay-link popup-img-single" href="/assets/images/capa_especies__ornamentais_vol1__79650_std.jpg"><i class="fa fa-external-link"></i></a>
                     <!--<span class="badge">30% OFF</span>-->
                     <!--<div class="overlay-to-top links">-->
                         <!--<span class="small">-->
