--- a/templates/basics/lateralL.html.twig
+++ b/templates/basics/lateralL.html.twig
@@ -10,8 +10,8 @@
                 <div class="col-xs-4 col-md-6">
                     <div class="image-box style-2 mb-20 bordered light-gray-bg">
                         <div class="overlay-container overlay-visible">
-                            <img src="./assets/imagens/especies/{{ especie.imagem }}" alt="">
-                            <a href="" class="overlay-link small"><i class="fa fa-link"></i></a>
+                            <img src="/assets/imagens/especies/{{ especie.imagem }}" alt="" class="imgFill h100" />
+                            <a href="{{ route('especies.show', {'id' : especie.id}) }}" class="overlay-link small"><i class="fa fa-link"></i></a>
                         </div>
                         <div class="text-center">
                             <h6>{{ especie.especie|length > 10 ? especie.especie|slice(0, 15) ~ '...' : especie.especie }}</h6>
@@ -21,7 +21,7 @@
                 {% endfor %}
             </div>
             <div class="text-right space-top">
-                <a href="" class="link-dark"><i class="fa fa-plus-circle pl-5 pr-5"></i>Mais</a>
+                <a href="{{ route('especies') }}" class="link-dark"><i class="fa fa-plus-circle pl-5 pr-5"></i>Mais</a>
             </div>
         </div>
         <div class="block clearfix">
@@ -31,7 +31,7 @@
                 <div class="media margin-clear">
                     <div class="media-left">
                         <div class="overlay-container">
-                            <img class="media-object" src="./assets/images/blog-thumb-1.jpg" alt="blog-thumb">
+                            <img class="media-object" src="/assets/images/blog-thumb-1.jpg" alt="blog-thumb">
                             <a href="" class="overlay-link small"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                 <div class="media margin-clear">
                     <div class="media-left">
                         <div class="overlay-container">
-                            <img class="media-object" src="./assets/images/blog-thumb-2.jpg" alt="blog-thumb">
+                            <img class="media-object" src="/assets/images/blog-thumb-2.jpg" alt="blog-thumb">
                             <a href="" class="overlay-link small"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="media margin-clear">
                     <div class="media-left">
                         <div class="overlay-container">
-                            <img class="media-object" src="./assets/images/blog-thumb-3.jpg" alt="blog-thumb">
+                            <img class="media-object" src="/assets/images/blog-thumb-3.jpg" alt="blog-thumb">
                             <a href="" class="overlay-link small"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                 <div class="media margin-clear">
                     <div class="media-left">
                         <div class="overlay-container">
-                            <img class="media-object" src="./assets/images/blog-thumb-4.jpg" alt="blog-thumb">
+                            <img class="media-object" src="/assets/images/blog-thumb-4.jpg" alt="blog-thumb">
                             <a href="" class="overlay-link small"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
