--- a/templates/basics/top.html.twig
+++ b/templates/basics/top.html.twig
@@ -16,29 +16,29 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <link href="assets/fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/assets/fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Fontello CSS -->
-    <link href="assets/fonts/fontello/css/fontello.css" rel="stylesheet">
+    <link href="/assets/fonts/fontello/css/fontello.css" rel="stylesheet">
 
     <!-- Plugins -->
-    <link href="assets/plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <link href="assets/plugins/rs-plugin/css/settings.css" rel="stylesheet">
-    <link href="assets/css/animations.css" rel="stylesheet">
-    <link href="assets/plugins/owl-carousel/owl.carousel.css" rel="stylesheet">
-    <link href="assets/plugins/owl-carousel/owl.transitions.css" rel="stylesheet">
-    <link href="assets/plugins/hover/hover-min.css" rel="stylesheet">
+    <link href="/assets/plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="/assets/plugins/rs-plugin/css/settings.css" rel="stylesheet">
+    <link href="/assets/css/animations.css" rel="stylesheet">
+    <link href="/assets/plugins/owl-carousel/owl.carousel.css" rel="stylesheet">
+    <link href="/assets/plugins/owl-carousel/owl.transitions.css" rel="stylesheet">
+    <link href="/assets/plugins/hover/hover-min.css" rel="stylesheet">
 
     <!-- The Project core CSS file -->
-    <link href="assets/css/style.css" rel="stylesheet" >
+    <link href="/assets/css/style.css" rel="stylesheet" >
     <!-- Style Switcher Styles (Remove these two lines) -->
-    <link href="assets/css/skins/green.css" rel="stylesheet">
+    <link href="/assets/css/skins/green.css" rel="stylesheet">
 
     <!-- Custom css -->
-    <link href="assets/css/custom.css" rel="stylesheet">
+    <link href="/assets/css/custom.css" rel="stylesheet">
 
     <!--  SDK Facebook  -->
     <div id="fb-root"></div>
