Cadastro de Plantas

--- a/templates/admin/basics/rodape.html.twig
+++ b/templates/admin/basics/rodape.html.twig
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<div class="footer text-muted">
+<div class="footer text-muted" style="z-index: 0;">
     &copy; {{ print|date('Y') }} <a href="#">Plantas do Brasil</a> Por <a href="" target="_blank">GWeb</a>
 </div>
 <!-- /footer -->
