--- a/templates/admin/Cadastros/edit.html.twig
+++ b/templates/admin/Cadastros/edit.html.twig
@@ -21,56 +21,53 @@
 						<!-- Lista usuários -->
 						<div class="panel panel-flat">
 							<div class="panel-heading">
-								<h5 class="panel-title">Edição de Cadastro</h5>
+								<h5 class="panel-title">Editar Cadastros</h5>
 							</div>
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1">
-									<form action="{{ route('admin.cadastros.update', {'id': cadastros.id}) }}" method="post">
+									<form action="{{ route('admin.cadastros.update', {'id': usuario.id}) }}" method="post">
 										<div class="panel panel-flat">
 											<div class="panel-body">
 
 												<fieldset class="content-group">
 													<legend class="text-bold">Dados Pessoais</legend>
-
-													<div class="form-group">
+													<div class="form-group col-md-12">
 														<label for="nome" class="control-label">Nome:</label>
-														<input name="nome" id="nome" type="text" class="form-control" placeholder="Eugene Kopyov" value="{{ cadastros.Pessoa.nome }}">
+														<input name="nome" id="nome" type="text" class="form-control" placeholder="Nome" value="{{ pessoa.nome }}">
 													</div>
-
-													<div class="form-group">
-														<div class="col-lg-12">
-															<div class="row">
-																<div class="col-md-6">
-																	<label for="email" class="control-label">E-Mail</label>
-																	<input name="email" id="email" type="text" class="form-control" placeholder="E-Mail" value="{{ cadastros.Pessoa.email }}">
-																</div>
-
-																<div class="col-md-6">
-																	<label for="telefone" class="control-label">Telefone</label>
-																	<input name="telefone" id="telefone" data-mask="(99) 99999-9999" type="text" class="form-control" placeholder="Telefone" value="{{ cadastros.Pessoa.telefone }}">
-																</div>
-															</div>
-														</div>
+													<div class="form-group col-md-6">
+														<label for="telefone" class="control-label">Telefone:</label>
+														<input name="telefone" id="telefone" type="text" class="form-control" placeholder="Telefone" value="{{ pessoa.telefone }}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="celular" class="control-label">Celular:</label>
+														<input name="celular" id="celular" type="text" class="form-control" placeholder="Celular" value="{{ pessoa.celular }}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="email" class="control-label">E-Mail:</label>
+														<input name="email" id="email" type="text" class="form-control" placeholder="E-Mail" value="{{ pessoa.email }}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="senha" class="control-label">Senha: <small><code>Preencha apenas se quiser alterar a senha</code></small></label>
+														<input name="senha" id="senha" type="text" class="form-control" placeholder="Senha" value="">
 													</div>
 												</fieldset>
 
 												<fieldset class="content-group">
-													<legend class="text-bold">Dados de usuário <smal>Altere apenas se necessário</smal></legend>
+													<legend class="text-bold">Dados de Assinatura</legend>
 
-													<div class="form-group">
-														<div class="col-lg-12">
-															<div class="row">
-																<div class="col-md-6">
-																	<label for="usuario" class="control-label">Usuário</label>
-																	<input name="usuario" id="usuario" type="text" class="form-control" placeholder="Usuario" value="{{ cadastros.usuario }}">
-																</div>
+													<div class="form-group col-md-6">
+														<label class="display-block">Data do pagamento </label>
+														<input class="form-control pickadate-translated_BR" value="{{ usuario.dataAssinatura|date("d/m/Y") }}" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
 
-																<div class="col-md-6">
-																	<label for="senha" class="control-label">Senha</label>
-																	<input name="senha" id="senha" type="password" class="form-control" placeholder="Senha">
-																</div>
-															</div>
-														</div>
+													<div class="form-group col-md-6">
+														<label class="display-block">Período da assinatura </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0" {% if usuario.periodoAssinatura == 0 %} selected {% endif %}>Anual</option>
+															<option value="1" {% if usuario.periodoAssinatura == 1 %} selected {% endif %}>Mensal</option>
+														</select>
 													</div>
 												</fieldset>
 
@@ -78,6 +75,7 @@
 											</div>
 										</div>
 									</form>
+									<div><br><br><br><br><br><br><br><br></div>
 								</div>
 							</div>
 						</div>
