--- a/templates/admin/Plantas/create.html.twig
+++ b/templates/admin/Plantas/create.html.twig
@@ -21,37 +21,41 @@
 						<!-- Lista usuários -->
 						<div class="panel panel-flat">
 							<div class="panel-heading">
-								<h5 class="panel-title">Cadastros</h5>
+								<h5 class="panel-title">Cadastrar Planta</h5>
 							</div>
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1">
-									<form action="{{ route('admin.cadastros.store') }}" method="post">
+									<form action="{{ route('admin.paises.store') }}" method="post">
 										<div class="panel panel-flat">
 											<div class="panel-body">
 
 												<fieldset class="content-group">
-													<legend class="text-bold">Dados Pessoais</legend>
-													<div class="form-group col-md-12">
-														<label for="nome" class="control-label">Nome:</label>
-														<input name="nome" id="nome" type="text" class="form-control" placeholder="Nome">
+													<legend class="text-bold">Arquivos de mídia</legend>
+													<div class="form-group">
+														<label for="fotos" class="control-label">Fotos:</label>
+														<div class="input-group file-caption-main">
+															<div tabindex="500" class="form-control file-caption  kv-fileinput-caption">
+																<div class="file-caption-name" title=""></div>
+															</div>
+
+															<div class="input-group-btn">
+																<button type="button" tabindex="500" title="Clear selected files" class="btn btn-default fileinput-remove fileinput-remove-button"><i class="icon-cross3"></i>  <span class="hidden-xs">Remover</span></button>
+																<button type="button" tabindex="500" title="Abort ongoing upload" class="btn btn-default hide fileinput-cancel fileinput-cancel-button"><i class="glyphicon glyphicon-ban-circle"></i>  <span class="hidden-xs">Cancel</span></button>
+																<button type="button" tabindex="500" title="Upload selected files" class="btn btn-default fileinput-upload fileinput-upload-button"><i class="icon-file-upload2"></i>  <span class="hidden-xs">Upload</span></button>
+																<div tabindex="500" class="btn btn-primary btn-file"><i class="icon-file-plus"></i>  <span class="hidden-xs">Buscar</span><input class="file-input" multiple="multiple" id="1507508615242" type="file"></div>
+															</div>
+														</div>
 													</div>
-													<div class="form-group col-md-6">
-														<label for="telefone" class="control-label">Telefone:</label>
-														<input name="telefone" id="telefone" type="text" class="form-control" placeholder="Telefone">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="celular" class="control-label">Celular:</label>
-														<input name="celular" id="celular" type="text" class="form-control" placeholder="Celular">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="email" class="control-label">E-Mail:</label>
-														<input name="email" id="email" type="text" class="form-control" placeholder="E-Mail">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="senha" class="control-label">Senha:</label>
-														<input name="senha" id="senha" type="text" class="form-control" placeholder="Senha">
-													</div>
+
+													<div class="form-group">
+														<label for="video" class="control-label">Vídeo:</label>
+														<div class="input-group col-md-12">
+															<input class="col-md-11" id="video" placeholder="Vídeo" name="video">
+															<button type="button" tabindex="500" title="Upload selected files" class="btn btn-default fileinput-upload fileinput-upload-button"><i class="icon-file-upload2"></i>  <span class="hidden-xs">Upload</span></button>
+														</div>
 												</fieldset>
+
+
 
 												<fieldset class="content-group">
 													<legend class="text-bold">Dados de Assinatura</legend>
@@ -75,7 +79,6 @@
 											</div>
 										</div>
 									</form>
-									<div><br><br><br><br><br><br><br><br></div>
 								</div>
 							</div>
 						</div>
@@ -98,5 +101,6 @@
 
 </div>
 <!-- /page container -->
+
 </body>
 </html>
