--- a/templates/admin/Plantas/list.html.twig
+++ b/templates/admin/Plantas/list.html.twig
@@ -21,18 +21,19 @@
 						<!-- Lista usuários -->
 						<div class="panel panel-flat">
 							<div class="panel-heading">
-								<h5 class="panel-title">Cadastros</h5>
+								<h5 class="panel-title col-md-10">Plantas</h5>
+								<a href="{{ route('admin.plantas.new') }}" class="btn btn-success btn-labeled"><b><i class="fa fa-plus"></i></b> Novo</a>
 							</div>
 
 							<table class="table datatable-basic table-hover">
 								<thead>
 									<tr>
-										<th>Nome</th>
-										<th>Usuário</th>
-										<th>E-Mail</th>
-										<th>Telefone</th>
-										<th>Primeiro Acesso</th>
-										<th>Ultimo Acesso</th>
+										<th>Família</th>
+										<th>Nome Científico</th>
+										<th>Nome Popular</th>
+										<th>Espécie</th>
+										<th>Gênero</th>
+										<th>Origem</th>
 										<th>Status</th>
 										<th class="text-center"></th>
 									</tr>
