Cadastro de plantas

--- a/templates/admin/Plantas/create.html.twig
+++ b/templates/admin/Plantas/create.html.twig
@@ -58,15 +58,88 @@
 
 
 												<fieldset class="content-group">
-													<legend class="text-bold">Dados de Assinatura</legend>
+													<legend class="text-bold">Nomenclatura</legend>
 
+													<div class="form-group col-md-4">
+														<label class="display-block">Família </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Nome científico </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Nome Popular </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+													<hr>
+												</fieldset>
+
+												<fieldset class="content-group">
 													<div class="form-group col-md-6">
-														<label class="display-block">Data do pagamento </label>
-														<input class="form-control pickadate-translated_BR" name="dataAssinatura" id="dataAssinatura" type="text">
+														<label class="display-block">Gênero </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
 													</div>
 
 													<div class="form-group col-md-6">
-														<label class="display-block">Período da assinatura </label>
+														<label class="display-block">Espécie </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
+													</div>
+													<div class="form-group col-md-6">
+														<label class="display-block">Sinonímia </label>
+														<textarea rows="4" cols="4" class="form-control elastic" placeholder="Textarea" style="overflow: hidden; overflow-wrap: break-word; resize: horizontal; height: 96px;"></textarea>
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Outros nomes populares </label>
+														<textarea rows="4" cols="4" class="form-control elastic" placeholder="Textarea" style="overflow: hidden; overflow-wrap: break-word; resize: horizontal; height: 96px;"></textarea>
+													</div>
+													<hr>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Ocorrência</legend>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Origem </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Endemismo </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Continente </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">País </label>
 														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
 															<option></option>
 															<option value="0">Anual</option>
@@ -75,7 +148,265 @@
 													</div>
 												</fieldset>
 
-												<button type="submit" class="btn bg-teal-400 pull-right"><i class="fa fa-pencil-square-o position-left"></i> Salvar </button>
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Distribuição no Brasil</legend>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Domínio Fitogeográfico </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Tipo de Vegetação </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Ecologia</legend>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Clima </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Substrato </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Grau de Umidade </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Grupo Sucessional </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Exigência Lumínica </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Ciclo de Vida </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Deiscência Foliar </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<div class="form-group col-md-12">
+														<label class="display-block">Resumo </label>
+														<textarea rows="4" cols="4" class="form-control elastic" placeholder="Textarea" style="overflow: hidden; overflow-wrap: break-word; resize: horizontal; height: 96px;"></textarea>
+													</div>
+													<div class="form-group col-md-12">
+														<label class="display-block">Informações </label>
+														<textarea rows="4" cols="4" class="form-control elastic" placeholder="Textarea" style="overflow: hidden; overflow-wrap: break-word; resize: horizontal; height: 96px;"></textarea>
+													</div>
+													<div class="form-group col-md-12">
+														<label class="display-block">Informações Adicionais </label>
+														<textarea rows="4" cols="4" class="form-control elastic" placeholder="Textarea" style="overflow: hidden; overflow-wrap: break-word; resize: horizontal; height: 96px;"></textarea>
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<div class="form-group col-md-12">
+														<label class="display-block">Características </label>
+														<select data-placeholder="Selecione o período" class="select" name="periodoAssinatura" id="periodoAssinatura">
+															<option></option>
+															<option value="0">Anual</option>
+															<option value="1">Mensal</option>
+														</select>
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Morfologia</legend>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Forma de Vida </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Altura Máxima </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Folha</legend>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Tipo de Folha </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Filotaxia </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Forma </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Margem </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Ápice </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Base </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Nervação </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Consistência </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Pilosidade </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Caracteres Especiais </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Flor</legend>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Cor </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Disposição </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Plano de Simetria </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Cálice </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Corola </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Forma da Corola </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Perianto </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-3">
+														<label class="display-block">Estames </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Casca</legend>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Aparência </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Deiscência </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-4">
+														<label class="display-block">Textura Interna </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Cor Interna </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Caracteres Especiais: </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Fruto</legend>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Tipo de Fruto </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Cor do Fruto </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+
+												<fieldset class="content-group">
+													<legend class="text-bold">Referências</legend>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Referência </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="display-block">Link </label>
+														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
+													</div>
+												</fieldset>
+
+													<button type="submit" class="btn bg-teal-400 pull-right"><i class="fa fa-pencil-square-o position-left"></i> Salvar </button>
 											</div>
 										</div>
 									</form>
