--- a/templates/admin/Plantas/create.html.twig
+++ b/templates/admin/Plantas/create.html.twig
@@ -380,7 +380,8 @@
 												<fieldset class="content-group">
 													<legend class="text-bold">Fruto</legend>
 
-													<div class="form-group col-md-6">
+													<div class="form-group col-md-6top
+">
 														<label class="display-block">Tipo de Fruto </label>
 														<input class="form-control" name="dataAssinatura" id="dataAssinatura" type="text">
 													</div>
