--- a/templates/admin/basics/top.html.twig
+++ b/templates/admin/basics/top.html.twig
@@ -36,24 +36,14 @@
     <script type="text/javascript" src="assets/js/plugins/forms/selects/bootstrap_multiselect.js"></script>
     <script type="text/javascript" src="assets/js/plugins/ui/moment/moment.min.js"></script>
     <script type="text/javascript" src="assets/js/plugins/pickers/daterangepicker.js"></script>
-
-
-    <!-- Add the language *after* the pickadate script files -->
-    <script src="assets/js/plugins/pickers/pickdate/translations/pt_BR.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/pickers/anytime.min.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/pickers/pickadate/picker.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/pickers/pickadate/picker.date.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/pickers/pickadate/picker.time.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/pickers/pickadate/legacy.js"></script>
-
-
-    <script type="text/javascript" src="assets/js/pages/picker_date.js"></script>
-    <script type="text/javascript" src="assets/js/pages/form_select2.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/notifications/sweet_alert.min.js"></script>
-    <script type="text/javascript" src="assets/js/pages/components_modals.js"></script>
-    <script type="text/javascript" src="assets/js/pages/form_layouts.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/forms/selects/select2.min.js"></script>
-    <script type="text/javascript" src="assets/js/plugins/forms/styling/uniform.min.js"></script>
-    <script type="text/javascript" src="assets/js/pages/form_inputs.js"></script>
     <!-- /theme JS files -->
+
+
+
+    <!-- Maps API Javascript -->
+    {#<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD47QalWkiz1rVyE0kIcf6BjQnSXtrGISo&sensor=false"></script>#}
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD47QalWkiz1rVyE0kIcf6BjQnSXtrGISo"></script>
+
+    <script type="text/javascript" src="assets/js/maps/google/markers/infobox.js"></script>
+    <script type="text/javascript" src="assets/js/maps/google/markers/markerclusterer.js"></script>
 </head>
